adding title to html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
     <script src="main.js"></script>
+    <title>Pig Latin Project</title>
+    
   </head>
   <body>
     <h1>Hello World!</h1>
