--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
     <script src="main.js"></script>
     <title>Pig Latin Project</title>
     
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header>
+      <h1>Pig Latin Translator</h1>
+    </header> 
     <hr/>
-    <div id="display-element"></div>
-    <button onclick="displayDate()">Click Me</button>
+    <div id="content">
+    <label for="pigLatin">Put in one or more words</label><br>
+    <input id="wordInput" name="wordInput" value=""><br> 
+    <button onclick="pigLatin()" id="translate-pl">PIG OUT</button>
+    <div id="showTranslation" style="font-size: 28px; font-family: 'Balsamiq Sans', cursive;"></div>
+    </div>
     <hr/>
   </body>
 </html>
