onclick now working

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
-    <script src="main.js"></script>
     <title>Pig Latin Project</title>
+    <script src="main.js"></script>
     
   </head>
   <body>
@@ -16,8 +16,10 @@
     <div id="content">
     <label for="pigLatin">Put in one or more words</label><br>
     <input id="wordInput" name="wordInput" value=""><br> 
-    <button onclick="pigLatin()" id="translate-pl">PIG OUT</button>
+    <button onclick="pigLatin()" type="button" id="translate-pl">PIG OUT</button>
     <div id="showTranslation" style="font-size: 28px; font-family: 'Balsamiq Sans', cursive;"></div>
+    <div id="showTranslation2" style="font-size: 28px; font-family: 'Balsamiq Sans', cursive;"></div>
+    <div id="showTranslation3" style="font-size: 28px; font-family: 'Balsamiq Sans', cursive;"></div>
     </div>
     <hr/>
   </body>
